# EE6032-Chat-Server

./: .gitignore  CMakeLists.txt  README.md  build.bat  cert.cpp  cert.h  cert_creation.cpp  cert_exchange.cpp  client.cpp  client.h  encryption.cpp  encryption.h  logging.cpp  logging.h  protocol.cpp  protocol.h  rsa.cpp  run.bat  server.cpp  server.h  socket_client_test.cpp  socket_client_test.ilk  socket_server_test.cpp  socket_server_test.ilk  vcpkg.json
archive/: aes.cpp  cert_example.cpp  socket_client_test.cpp  socket_server_test.cpp
include/: encryption.h  logging.h  protocol.h
src/: cert.cpp  client.cpp  client.h  encryption.cpp  logging.cpp  protocol.cpp  server.cpp  server.h
utils/: ca_cert.cpp  client_cert.cpp
